--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".ActivityLogin">
+    tools:context=".MainActivity"
+    android:background="#4A47A7"
+    >
 
     <EditText
         android:id="@+id/loginEmail"
@@ -15,6 +17,7 @@
         android:hint="Email"
         android:inputType="textEmailAddress"
         tools:ignore="MissingConstraints"
+        android:textColor="@android:color/black"
          />
 
     <EditText
@@ -23,9 +26,11 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:hint="Password"
-        android:inputType="numberPassword"
+        android:inputType="textPassword"
         tools:ignore="MissingConstraints"
         android:layout_below="@id/loginEmail"
+        android:textColor="@android:color/black"
+
          />
 
     <Button
@@ -33,10 +38,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:text="Login In"
+        android:text="Log In"
         android:textSize="25dp"
         tools:ignore="MissingConstraints"
-        android:layout_below="@id/loginpaswd" />
+        android:layout_below="@id/loginpaswd"
+        android:background="#FFF"/>
 
     <TextView
         android:id="@+id/TVSignIn"
@@ -46,6 +52,7 @@
         android:text="New User? Register Here"
         android:textSize="20dp"
         tools:ignore="MissingConstraints"
-        android:layout_below="@id/btnLogIn" />
+        android:layout_below="@id/btnLogIn"
+        android:textColor="@android:color/black"/>
 
 </RelativeLayout>
