--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,10 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#4A47A7</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#F0657A</color>
     <color name="purple">#4A47A7</color>
+    <color name="yellow">#FFD386</color>
+    <color name="navy">#3262A1</color>
+
+    FFD386
 </resources>
