--- a/app/src/main/res/layout/activity_navy.xml
+++ b/app/src/main/res/layout/activity_navy.xml
@@ -9,7 +9,6 @@
     android:background="@color/navy"
     tools:context=".UserActivity2">
 
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -20,6 +19,24 @@
         android:textColor="#FFF"
         android:textSize="24sp" />
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView"
+        android:layout_above="@+id/btnLogOut"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/list_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="4dp"
+            android:listSelector="@android:color/transparent"
+            android:cacheColorHint="@android:color/transparent"
+            android:divider="@color/navy"/>
+
+    </LinearLayout>
     <Button
         android:id="@+id/btnLogOut"
         android:layout_width="match_parent"
@@ -29,4 +46,5 @@
         android:text="Back"
         android:background="#FFF"
         android:textColor="@android:color/black"/>
+
 </RelativeLayout>
