--- a/app/src/main/res/layout/activity_purple.xml
+++ b/app/src/main/res/layout/activity_purple.xml
@@ -9,6 +9,15 @@
     android:background="@color/purple"
     tools:context=".UserActivity2">
 
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="70dp"
+        android:src="@drawable/ic_baseline_info_24"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"/>
+
 
     <TextView
         android:id="@+id/textView"
