--- a/app/src/main/res/layout/activity_red.xml
+++ b/app/src/main/res/layout/activity_red.xml
@@ -9,24 +9,120 @@
     android:background="@color/colorAccent"
     tools:context=".UserActivity2">
 
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="70dp"
+        android:src="@drawable/ic_baseline_assessment_24"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="50dp"
         android:text="VDR"
         android:textColor="#FFF"
         android:textSize="24sp" />
 
-    <Button
-        android:id="@+id/btnLogOut"
+
+    <LinearLayout
+
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:layout_below="@+id/logo"
+        android:layout_marginTop="52dp"
+        android:layout_weight="2"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="15dp"
-        android:text="Back"
-        android:background="#FFF"
-        android:textColor="@android:color/black"/>
+        android:id="@+id/linear"
+        >
+        <LinearLayout
+
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="@drawable/gauge_green"
+                android:clickable="true"
+                android:id="@+id/green"
+                >
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="@drawable/gauge_yellow"
+                android:clickable="true"
+                android:id="@+id/yel"
+                >
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="@drawable/gauge_orange"
+                android:clickable="true"
+                android:id="@+id/orange"
+                >
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="@drawable/gauge_red"
+                android:clickable="true"
+                android:id="@+id/red"
+                >
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:layout_marginTop="90dp"
+        android:layout_below="@+id/linear"
+        android:textColor="#FFF"
+        android:textSize="80sp" />
 </RelativeLayout>
+
